fixing the overlapping buttons situation

--- a/style.css
+++ b/style.css
@@ -124,9 +124,15 @@ h1{
     background-color: rgba(56, 53, 53, 0.205);
 }
 
+.icon{
+    padding: 10px;
+    width: 5rem;
+}
+
 button{
     align-self: center;
-    width: 10vw;
+    width: 100%;
+    max-width: 15.70rem; 
     height: 2rem;
     margin-top: 1%;
     color: white;
